sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: illegal start of simple expression
			if (!plusPetit(tmp,getValeur(i+j)))){
                                                           ^